...
    <string name="connection_failed">Connection failed!</string>
    <string name="connection_unsuccessful">Connection was not successful. Are you sure that you picked the correct device? Device must support Bluetooth Low Energy!</string>
    <string name="do_you_want_to_delete">Do you want to delete all stored data? (Results, Course)</string>
    <string name="do_you_want_to_delete_results">Do you want to delete all stored results?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="quit_run">Quit run</string>
    <string name="welcome_name">Welcome, %1$s!</string>
    <string name="please_wait_while_the_course_is_loaded">Please wait while the course is loaded</string>
    <string name="no_course_qr_code_scanned">No QR Code was scanned!</string>
    <string name="no_cp_qr_code_scanned">No QR Code was scanned!</string>
...
